sqlo_macros/tests/try/err/wrong_literal.stderr
error: expected string literal: #[sqlo(table_name = "items")]
 --> tests/try/err/wrong_literal.rs:5:21
  |
5 | #[sqlo(table_name = 123)]
  |                     ^^^
